# runn

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: activation.rs  lib.rs  main.rs  native.rs
src/elementwise/: mod.rs  mul.rs  relu.rs
src/linalg/: dot.rs
src/scalar/: mod.rs  relu.rs
tests/: integration_tests.rs
